--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@ kotlin.code.style=official
 android.useAndroidX=true
 android.enableJetifier=true
 
-opencvsdk=/Users/Example/Downloads/OpenCV-android-sdk
+opencvsdk=D\:/ProgramFiles/OpenCV-android-sdk
