--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -15,6 +15,16 @@ set_target_properties(lib_opencv PROPERTIES IMPORTED_LOCATION ${OpenCV_DIR}/libs
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
+        dehaze
+
+        # Sets the library as a shared library.
+        SHARED
+
+        # Provides a relative path to your source file(s).
+        dehaze.cpp
+        dehaze.h)
+
+add_library( # Sets the name of the library.
         native-lib
 
         # Sets the library as a shared library.
@@ -39,6 +49,15 @@ find_library( # Sets the name of the path variable.
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
+
+target_link_libraries( # Specifies the target library.
+        dehaze
+
+        lib_opencv
+
+        # Links the target library to the log library
+        # included in the NDK.
+        ${log-lib})
 
 target_link_libraries( # Specifies the target library.
         native-lib
