--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,19 @@ allprojects {
         mavenCentral()
         google( )
     }
+
+    project.ext {
+        libraries = [
+                appCompat         : 'androidx.appcompat:appcompat:1.1.0',
+                googlePlayServices: 'com.google.android.gms:play-services-location:17.0.0',
+
+                junit             : 'junit:junit:4.12',
+                assertJ           : 'com.squareup.assertj:assertj-android:1.1.1',
+                mockito           : 'org.mockito:mockito-core:2.7.2',
+
+                leakcanary        : 'com.squareup.leakcanary:leakcanary-android:2.4'
+        ]
+    }
 }
 
 task clean(type: Delete) {
